# mongodb-qdrant-vector-search-rag

./: .env.example  .gitignore  COLLABORATION.md  LICENSE  README.md  TASKS.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: ci.yml
configs/: benchmark.yaml  embeddings.yaml
configs/mongodb/: README.md  benchmark.yaml  text-index.json  vector-index.json
configs/qdrant/: collection.yaml
data/demo/: corpus.jsonl
data/evaluation/: qrels.tsv  queries.jsonl
docs/: architecture.md  index.html
docs/assets/: app.js  styles.css
docs/superpowers/plans/: 2026-06-22-collaboration-starter.md  2026-06-22-ossama-mongodb-track.md
docs/superpowers/specs/: 2026-06-22-vector-databases-rag-design.md
reports/: final_report.md
reports/sections/: README.md  mongodb.md  qdrant.md
results/comparison/: final_comparison.csv
results/qdrant/: benchmark_results.json  benchmark_summary.csv  ingestion_summary.json
scripts/: Script_Hamza_SHORT.txt  Script_Ossama_SHORT.txt
src/vector_rag/: __init__.py  backend.py  benchmark.py  contracts.py  io.py  qdrant_backend.py
src/vector_rag/mongodb_track/: __init__.py  __main__.py  benchmark.py  config.py  embeddings.py  hybrid.py  indexes.py  ingest.py  ingestion.py  metrics.py  rag.py  schema.py  search.py
tests/: test_backend_protocol.py  test_contracts.py  test_data_fixtures.py  test_documentation.py  test_frontend_static_site.py  test_github_configuration.py  test_io.py  test_project_files.py  test_qdrant_backend.py
(+22 files in other folders)
